Finalizado Documentação do Swagger.
